# hexagonal-architecture-examples

./: .gitignore  CONTRIBUTING.md  QUICK_START.md  README.md
adr/: 0001-scope-minimal-examples.md  0002-ports-are-interfaces.md
diagrams/: hexagonal-overview.mmd
docs/: 01-what-is-hexagonal.md  02-ports-vs-adapters.md  03-testing-strategy.md  04-folder-structure-guide.md
examples/cpp/: README.md
examples/cpp/minimal-order-service/: CMakeLists.txt  main.cpp
examples/cpp/minimal-order-service/adapters/inbound/cli/: order_controller.cpp  order_controller.hpp
examples/cpp/minimal-order-service/adapters/outbound/: fake_payment_gateway.cpp  fake_payment_gateway.hpp  in_memory_repository.cpp  in_memory_repository.hpp
examples/cpp/minimal-order-service/application/ports/inbound/: place_order_port.hpp
examples/cpp/minimal-order-service/application/ports/outbound/: order_repository.hpp  payment_gateway.hpp
examples/cpp/minimal-order-service/application/usecases/: place_order_use_case.cpp  place_order_use_case.hpp
examples/cpp/minimal-order-service/domain/: money.cpp  money.hpp  order.cpp  order.hpp
examples/cpp/minimal-order-service/tests/: test_adapters.cpp  test_domain.cpp  test_usecases.cpp
examples/csharp/: README.md
examples/csharp/minimal-order-service/: OrderService.csproj  Program.cs
examples/go/: README.md
examples/go/minimal-order-service/: adapters_test.go  application_test.go  domain_test.go  go.mod
examples/java/: README.md
examples/java/minimal-order-service/: pom.xml
examples/python/: README.md
(+56 files in other folders)
